[tool.poetry]
name = "phone_book_ver.1"
version = "0.1.0"
description = ""
authors = ["Alexandr Lisimenko <lisimenko.alexander@yandex.ru>"]
readme = "README.md"
packages = [{include = "phone_book_ver"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
